--- a/pom.xml
+++ b/pom.xml
@@ -58,19 +58,17 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-
+        <!--Report Portal-->
         <dependency>
             <groupId>com.epam.reportportal</groupId>
             <artifactId>agent-java-testng</artifactId>
             <version>4.0.1</version>
         </dependency>
-
         <dependency>
             <groupId>com.epam.reportportal</groupId>
             <artifactId>logger-java-log4j</artifactId>
             <version>4.0.1</version>
         </dependency>
-
     </dependencies>
 
 
