--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, console, file, HTML
+log4j.rootLogger=INFO, console, file, HTML
 log4j.logger.org.apache.http=ERROR
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
